# rust-nif-examples

./: .gitignore  LICENSE  README.md  rebar.config
apps/basic/: rebar.config
apps/basic/crates/basic/: Cargo.toml  build.rs
apps/basic/src/: basic.app.src
basic/: .gitignore  Cargo.toml  rebar.config
basic/crates/basic/: .gitignore  Cargo.toml
basic/crates/basic/src/: lib.rs
basic/src/: basic.erl  crates.hrl
simple_async/: Cargo.toml  Makefile  rebar.config
simple_async/crates/simple_async/: Cargo.toml
simple_async/crates/simple_async/src/: atoms.rs  lib.rs
simple_async/src/: simple_async.app.src  simple_async.erl
simple_async/test/: simple_async_test.erl
