[package]
name = "basic"
version = "0.1.0"
authors = ["Paul J. Davis <paul.joseph.davis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "basic"
crate-type = ["dylib"]

[dependencies]
rustler = {git = "git://github.com/rusterlium/rustler.git", branch="master"}
